<resources>
    <string name="app_name">Aston Intensive</string>
    <string name="welcome_image" translatable="false">Welcome Image</string>
    <string name="aston_logo" translatable="false">Aston Logo</string>
    <string name="about_us">About us:</string>
    <string name="string_office_locations">Offices</string>
    <string name="string_moscow_location">Moscow</string>
    <string name="string_kazan_location">Kazan</string>
    <string name="string_rostov_on_don_location">Rostov-on-Don</string>
    <string name="string_minsk_location">Minsk</string>
    <string name="string_gomel_location">Gomel</string>
    <string name="string_contacts">Contacts</string>
    <string name="string_vacancies">Vacancies</string>
    <string name="string_gallery">Gallery</string>
    <string name="string_title">IT solutions for business development</string>
    <string name="string_subtitle">Software Development</string>
    <string name="string_about_us_description">Aston is a full service software development company. For 15 years, we\'ve been helping customers around the world transform their businesses by building powerful mobile and desktop solutions.</string>
    <string name="logo_custom_view">Logo custom view</string>
    <string name="title_customView">Android trainee</string>
    <string name="string_first_vacancies_title">Android developer</string>
    <string name="string_first_vacancies_subtitle">Aston engineers develop many Android solutions and cross-platform applications with rich functionality</string>
    <string name="string_second_vacancies_subtitle">Aston engineers use modern frameworks to solve your business problems, including Vue.js, Angular and React.js</string>
    <string name="string_second_vacancies_title">JavaScript developer</string>
    <string name="string_third_vacancies_subtitle">Aston Java developers are well aware of the specifics of this programming language. We use it for those projects where the strengths of Java will be most useful.</string>
    <string name="string_third_vacancies_title">Java developer</string>
    <string name="string_sign_in">Sign in</string>
    <string name="string_home">Home</string>
    <string name="string_vacancies_toolbar">Vacancies</string>
    <string name="string_offices">Offices</string>
    <string name="string_moscow">Moscow</string>
    <string name="string_kazan">Kazan</string>
    <string name="string_rostov_on_don">Rostov-on-Don</string>
    <string name="string_minsk">Minsk</string>
    <string name="string_gomel">Gomel</string>
    <string name="login_title">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="subtitle_customView">Android Internship</string>
    <string name="moscow_address">Presnenskaya embankment, 6, building 2, BC Tower Empire, entrance 3, floor 53, office 13, Russia</string>
    <string name="kazan_address">st. N. Ershova, 76/1, office. 213, Russia</string>
    <string name="rostovOnDon_address">st. Tekucheva, 246, 3rd floor, Russia</string>
    <string name="minsk_address">Pobediteley Ave, 7A, Belarus</string>
    <string name="gomel_address">st. Sovetskaya, 41B, Belarus</string>
    <string name="string_welcome">Welcome</string>
    <string name="phone_number">+7(495)138–39–39</string>
    <string name="editText_username_error">Wrond username</string>
    <string name="editText_password_error">Wrong password</string>
    <string name="belarus_flag">Belarus Flag</string>
    <string name="russian_flag">Russian Flag</string>
</resources>