<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.offices.OfficesFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/offices_toolbar"
        android:layout_width="@dimen/toolbar_width"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/string_offices"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/office_guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_details_begin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/office_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_details_end" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/moscow_office"
        android:layout_width="@dimen/button_details_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_details_marginBottom"
        android:text="@string/string_moscow"
        app:layout_constraintBottom_toTopOf="@id/kazan_office"
        app:layout_constraintEnd_toEndOf="@id/office_guideline_end"
        app:layout_constraintStart_toStartOf="@id/office_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/offices_toolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/kazan_office"
        android:layout_width="@dimen/button_details_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_details_marginTop"
        android:layout_marginBottom="@dimen/button_details_marginBottom"
        android:text="@string/string_kazan"
        app:layout_constraintBottom_toTopOf="@id/rostov_on_don_office"
        app:layout_constraintEnd_toEndOf="@id/office_guideline_end"
        app:layout_constraintStart_toStartOf="@id/office_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/moscow_office" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rostov_on_don_office"
        android:layout_width="@dimen/button_details_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_details_marginTop"
        android:layout_marginBottom="@dimen/button_details_marginBottom"
        android:text="@string/string_rostov_on_don"
        app:layout_constraintBottom_toTopOf="@id/minsk_office"
        app:layout_constraintEnd_toEndOf="@id/office_guideline_end"
        app:layout_constraintStart_toStartOf="@id/office_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/kazan_office" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minsk_office"
        android:layout_width="@dimen/button_details_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_details_marginTop"
        android:layout_marginBottom="@dimen/button_details_marginBottom"
        android:text="@string/string_minsk"
        app:layout_constraintBottom_toTopOf="@id/gomel_office"
        app:layout_constraintEnd_toEndOf="@id/office_guideline_end"
        app:layout_constraintStart_toStartOf="@id/office_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/rostov_on_don_office" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gomel_office"
        android:layout_width="@dimen/button_details_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_details_marginTop"
        android:text="@string/string_gomel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/office_guideline_end"
        app:layout_constraintStart_toStartOf="@id/office_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/minsk_office" />

</androidx.constraintlayout.widget.ConstraintLayout>