<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_begin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_end" />

    <ImageView
        android:id="@+id/logo_imageView_rv"
        android:layout_width="@dimen/imageView_width"
        android:layout_height="@dimen/imageView_height"
        android:layout_marginTop="@dimen/imageView_marginTop"
        android:contentDescription="@string/aston_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/subtitle_rv"
        app:layout_constraintEnd_toStartOf="@id/title_rv"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_rv"
        style="@style/TextViewTitlesStyle"
        android:text="@string/string_title"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/logo_imageView_rv"
        app:layout_constraintTop_toTopOf="@id/logo_imageView_rv"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitle_rv"
        style="@style/TextViewDescriptionStyle"
        android:text="@string/string_subtitle"
        android:textSize="@dimen/textView_description_textSize"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/logo_imageView_rv"
        app:layout_constraintTop_toBottomOf="@id/title_rv"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>